bk_ida/gccida/c1/build_conditional_expr
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/build_conditional_expr/src/c-typeck.c:3841:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v4; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/build_conditional_expr/src/c-typeck.c:3853:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v16; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/build_conditional_expr/src/c-typeck.c:3854:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v17; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/build_conditional_expr/src/c-typeck.c:3855:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v19; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/build_conditional_expr/src/c-typeck.c:3860:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v24; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/build_conditional_expr/src/c-typeck.c:3861:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v25; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/build_conditional_expr/src/c-typeck.c:3862:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v26; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/build_conditional_expr/src/c-typeck.c:3863:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v27; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/build_conditional_expr/src/c-typeck.c:3864:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v28; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/build_conditional_expr/src/c-typeck.c:3875:14: error: expected identifier or '('
 struct expr = v5; 
             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/build_conditional_expr/src/c-typeck.c:3956:20: error: expected expression
v26 = ( tree_node *)*( &global_trees + 27); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/build_conditional_expr/src/c-typeck.c:3956:9: error: use of undeclared identifier 'tree_node'
v26 = ( tree_node *)*( &global_trees + 27); 
        ^
12 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/build_conditional_expr/src/obj/c-typeck.o] Error 1
